
Denora v1.5.0-git
-------------

Additions
12/06/12 Added channelmode +R to scarynet
12/04/20 Added country lookup for servers to support #46@magirc
11/04/22 r432 Added parameter support for !stats and !gstats
11/02/12 r423 Added support for accounts on Charybdis at burst
11/02/12 r421 Added support for accounts on Charybdis
11/02/11 r416 Added support for ircd-rizon

Changes
12/06/27 Bumped to 1.5.0-git-501
12/06/26 Use inet_ntop for decode_ip function
12/06/26 Reduced mysql_backup.c by 27%
12/04/25 Channel names no longer forced to lowercase (#1403)
12/04/24 Updated GeoIP databases
12/04/11 Added 'cron' function to denorarc for crontab usage 
12/04/11 Updated ScaryNet protocol
11/05/04 r435 Fixed formatting of docs/EVENTS
11/04/10 r428 documented the -protocoldebug option in the -help output
11/04/10 r428 made denora accept options that start with --
11/02/11 r419 Updated Denora icon
11/02/11 r416 Updated Windows installer

Fixes
12/06/27 Fixed a few possible memleaks (thx cedric for the valgrind report)
12/06/26 Fixed a few compiler warnings 
12/06/12 Fixed topichandler for scarynet protocol
12/04/06 [1] Fixed geoipupd script breaking geoip (#1406)
12/03/31 Fixed grammar errors (#1260)
12/02/05 r436 Fixed ADMIN ADD command ignoring supplied host mask
11/04/10 r431 Fixed duplicate call to denora_set_umode() in ircdrizon protocol
11/04/10 r430 Fixed duplicate call to denora_set_umode() in charybdis protocol
11/04/10 r429 Fixed unknown user mode Z in charybdis protocol
11/03/30 r427 Fixed crash on nickchange in ngircd protocol (#1257)
11/02/13 r426 Fixed erroneous ','s in SQL queries in do_account()
11/02/12 r424 Fixed support for accounts on Charybdis at burst (oops)
11/02/12 r422 Fixed compile errors
11/02/12 r421 Fixed memleaks and crashbug in do_p10account
11/02/11 r417 Fixed Denora not running on Windows XP/2003 anymore
11/02/11 r416 Scarynet module was not compiled on windows

Removals
12/06/26 Removed defs for strndup as it's not used at all